--- a/templates/settings.html
+++ b/templates/settings.html
@@ -34,7 +34,7 @@
                         <div class="custom-file">
                             <input type="file" class="custom-file-input" id="customFile">
                             <label class="custom-file-label mt-3" for="customFile">Choose file</label>
-                            <button type="button" class="btn btn-primary btn-lg w-25 ml-0 mt-5">Ask</button>
+                            <button type="button" class="btn btn-primary btn-lg w-25 ml-0 mt-5">Change</button>
                         </div>
                     </div>
                 </div>
