--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="{% url 'index'%}">
         <img src="{% static "img\logo.png" %}" alt="logo">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,7 +25,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{% url 'index'%}">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
@@ -48,7 +48,7 @@
             </form>
           </li>
             <li>
-              <button type="button" class="btn btn-primary ml-2">Ask</button>
+              <button type="button" class="btn btn-primary ml-2"><a class=text-white href="{% url 'ask' %}">Ask</a></button>
             </li>
         </ul>
           <div class="nav-item">
@@ -57,16 +57,26 @@
           <div class="nav-item ml-2 mr-5">
               <div class="row">
                   <div class="col pl-5">
-                    <p id="parag">Nickname</p>
+                      {% if is_login %}
+                    <p id="parag"></p>
                   </div>
               </div>
               <div class="row">
                 <div class="col">
-                  <a href="#">Settings</a>
+                  <a href="{% url 'settings' %}">Settings</a>
                 </div>
                 <div class="col">
-                  <a href="#">Log out</a>
+                  <a href="">Log out</a>
                 </div>
+                      {% else %}
+                  <div class="col">
+                      <a href="{% url 'login' %}">Log in</a>
+                  </div>
+                  <div class="col">
+
+                    <a href="{% url 'signup' %}">register</a>
+                  </div>
+                        {% endif %}
               </div>
           </div>
       </div>
@@ -84,34 +94,29 @@
               <div class="container">
                 <ul>
                   <li>
-                    <a class="cloudTag_1" href="#">python</a>
-                    <a class="cloudTag_2" href="#">C++</a>
-                    <a class="cloudTag_2" href="#">javaScript</a>
-                  </li>
-                  <li>
-                    <a class="cloudTag_1" href="#">Mysql</a>
-                    <a class="cloudTag_2" href="#">Dropbox</a>
-                  </li>
-                  <li>
-                    <a class="cloudTag_3" href="#">Postgre</a>
+                      {% for tag in popular_tags %}
+                          <a class="cloudTag_1" href="{% url 'tag' tag.tagname %}">{{tag.tagname}}</a>
+                      {% endfor %}
+
                   </li>
                 </ul>
               </div>
               <h3 class="leftMenu mb-3 mt-5">Best members</h3>
               <div class="border border-success">
                 <ol class="mt-3">
-                  <li class="text-primary"> Cras justo odio</li>
-                  <li class="text-primary"> Cras justo odio</li>
-                  <li class="text-primary"> Cras justo odio</li>
-                  <li> Cras justo odio</li>
-                  <li> Cras justo odio</li>
-                  <li> Cras justo odio</li>
+                    {% for user in users_top %}
+                  <li class="text-primary"> {{user.user.username}}</li>
+                    {% endfor %}
                 </ol>
               </div>
               <!-- end of row -->
             </div>
         </div>
     </div>
+
+    {% block paginator %}
+
+    {% endblock %}
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
