--- a/templates/question.html
+++ b/templates/question.html
@@ -6,8 +6,9 @@
         {% endblock %}
     {% block content %}
     <div class="col -8">
-          <h3>New questions 
-            <a class = "notimp" href="#">Hot questions</a>
+          <h3>
+              <a class = "notimp" href="{% url 'index' %}">New questions</a>
+              <a class = "notimp" href="{% url 'hot' %}">Hot questions</a>
           </h3>
           <div class="row">
             <div class="media mt-5 p-4 border border-dark">
@@ -21,16 +22,19 @@
               </div>
               <div class="col-10 p-0">
                 <div class="media-body content-media">
-                  <h3 class="mt-0 ">How to build a Moon park!?</h3>
-                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                    <p></p>
-                    <p>Tags <a href="#">blackjack</a> <a href="">bender </a></p>
+                  <h3 class="mt-0 ">{{ question.title }}</h3>
+                    {{ question.text }}
+                    <p>Tags
+                        {% for tag in popular_tags %}
+                            <a href="{% url 'tag' tag.tagname %}"> {{tag.tagname}}</a>
+                        {% endfor %}
+                    </p>
                 </div>
               </div>
             </div>         
           </div>
           <div class="row mt-4">
-            <h3>Comments</h3>
+            <h3>Answers</h3>
             <div class="media mt-5 ">
               <div class="col -1 p-0">
                 <p class="mb-1"><img src="{% static "img/port.jpg" %}" width="100px" height="100px" class="mr-3" alt="pic"></p>
@@ -71,12 +75,9 @@
         </div>
     {% endblock %}
 
-{#    <nav aria-label="Page navigation example" class="ml-5">#}
-{#  <ul class="pagination mt-5">#}
-{#    <li class="page-item"><a class="page-link" href="#">Previous</a></li>#}
-{#    <li class="page-item"><a class="page-link" href="#">1</a></li>#}
-{#    <li class="page-item"><a class="page-link" href="#">2</a></li>#}
-{#    <li class="page-item"><a class="page-link" href="#">3</a></li>#}
-{#    <li class="page-item"><a class="page-link" href="#">Next</a></li>#}
-{#  </ul>#}
-{#</nav>#}
+
+    {% block paginator %}
+{#        {% include 'paginator.html' with page=answers %}#}
+    {% endblock %}
+
+
