--- a/templates/settings.html
+++ b/templates/settings.html
@@ -8,7 +8,8 @@
 {% block content %}
     <div class="col -8">
         <div class="row">
-            <form>
+            <h3>Settings: DR.Pepper</h3>
+            <form class=" mt-4">
                 <div class="form-group row">
                     <label for="colFormLabelLg" class="col-sm-3 col-form-label col-form-label-lg">Login</label>
                     <div class="col-sm-9">
