--- a/templates/ask.html
+++ b/templates/ask.html
@@ -5,20 +5,21 @@
 {% endblock %}
 
 {% block content %}
+
         <div class="col -8">
-          <form>
+        <h3>New question</h3>
+          <form class="mt-3">
             <div class="form-group">
-              <label for="exampleInputEmail1">title</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+              <label>Title</label>
+              <input type="text" class="form-control" id="basic-addon1" placeholder="Enter title">
             </div>
             <div class="form-group">
               <label for="exampleFormControlTextarea1">text</label>
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Input your question here"></textarea>
             </div>
             <div class="form-group">
-              <label for="exampleInputPassword1">tag</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+              <label>Tags</label>
+              <input type="text" class="form-control"  placeholder="Enter tags">
             </div>
 
             <button type="submit" class="btn btn-primary">Ask</button>
