--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,8 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="{% url 'index'%}">
-        <img src="{% static "img\logo.png" %}" alt="logo">
+      <a class="navbar-brand w-25 h-25" href="{% url 'index'%}">
+        <img class="ml-3" src="{% static "img\logo1.png" %}" alt="logo" width="45%" height="25%">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -105,7 +105,7 @@
               <div class="border border-success">
                 <ol class="mt-3">
                     {% for user in users_top %}
-                  <li class="text-primary"> {{user.user.username}}</li>
+                  <li class="text-primary"> {{user.user.username}} : {{ user.rating }}</li>
                     {% endfor %}
                 </ol>
               </div>
