--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
               <div class="col -1 p-0">
                 <p class="mb-1 mt-2"><img src=" {% static "img/port.jpg"%}" width="100px" height="100px" class="mr-3" alt="pic"></p>
                 <p>
-                    <span class="border border-dark p-1">15</span>
+                    <span class="border border-dark p-1">{{ question.rating }}</span>
                   <button class="btn btn-link m-0 p-2"><img src="{% static "img/like.png" %} " width="15px" height="15px"></button>
                   <button class="btn btn-link m-0 p-0"><img src="{% static "img/dislike.png" %}" width="15px" height="15px"></button>
                 </p>
@@ -27,7 +27,7 @@
                   <a href="{% url 'question' question.id %}"><h3>{{ question.title }}</h3></a>
                     {{ question.text }}
                     <p class="mt-3">
-                        <a class= "text-success"href="{% url 'question' question.id %}">Answers: ({{ question.amountAnswers }})</a>
+                        <a class= "text-success"href="{% url 'question' question.id %}">Answers: (ll)</a>
                         <span class = "tags ml-5">
                             Tags:
                             {% for tag in question.tags.all %}
@@ -41,6 +41,19 @@
           </div>
             {% endfor %}
         </div>
+    {% endblock %}
+
+
+    {% block js %}
+        <script>
+        (function() {
+            $('.js_vote').on('click' , function () {
+                var $this = $(this)
+                var qid = $this.data('qid')
+                var  = $this.data('qid')
+
+            })
+        }
     {% endblock %}
 
     {% block paginator %}
