--- a/templates/base.html
+++ b/templates/base.html
@@ -47,9 +47,11 @@
               <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
           </li>
+            {% if is_login %}
             <li>
               <button type="button" class="btn btn-primary ml-2"><a class=text-white href="{% url 'ask' %}">Ask</a></button>
             </li>
+            {% endif %}
         </ul>
           <div class="nav-item">
               <img src="{% static "img/avatar.png" %}" width="50px" height="50x">
@@ -58,7 +60,7 @@
               <div class="row">
                   <div class="col pl-5">
                       {% if is_login %}
-                    <p id="parag"></p>
+                    <p id="parag">{{ username }}</p>
                   </div>
               </div>
               <div class="row">
@@ -66,7 +68,7 @@
                   <a href="{% url 'settings' %}">Settings</a>
                 </div>
                 <div class="col">
-                  <a href="">Log out</a>
+                  <a href="{% url 'logout' %}">Log out</a>
                 </div>
                       {% else %}
                   <div class="col">
@@ -105,7 +107,7 @@
               <div class="border border-success">
                 <ol class="mt-3">
                     {% for user in users_top %}
-                  <li class="text-primary"> {{user.user.username}} : {{ user.rating }}</li>
+                        <li class="text-primary"> {{user.user.username}} : {{ user.rating }}</li>
                     {% endfor %}
                 </ol>
               </div>
