--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
                 <h2 class="mt-3">Log in</h2>
             </div>
             <div class="row">
-                <form class="border border-success p-3 mt-3">
+                <form class="border border-success p-3 mt-3" action ="{% url 'signup' %}">
                     <div class="form-group row mt-5">
                         <label for="colFormLabelLg" class="col-sm-3 col-form-label col-form-label-lg">Login</label>
                         <div class="col-sm-9">
@@ -28,14 +28,15 @@
                     </div>
                 </form>
             </div>
+            <form action ="{% url 'login' %}" method="POST" novalidate>
+                {% csrf_token %}
+                {{ form }}
+                <input type="submit" value="OK">
+            {#    {% include 'путь до реализован формы' %}#}
+            </form>
         </div>
+
 {% endblock %}
 
 
-# отрисовать формы с помощью форм
-
-<form action ="{% url 'login' %}" method="POST" novalidate>
-    {% csrf_token %}
-    {% include 'путь до реализован формы' %}
-</form>
 
