--- a/templates/register.html
+++ b/templates/register.html
@@ -8,7 +8,7 @@
 
 <div class="col -8">
         <div class="row">
-            <form class="mt-5">
+            <form class="mt-5" action="">
                 <div class="form-group row">
                     <label for="colFormLabelLg" class="col-sm-3 col-form-label col-form-label-lg">Login</label>
                     <div class="col-sm-9">
@@ -52,5 +52,12 @@
 
             </form>
         </div>
+
+            <form class="mt-5 pt-5"action ="{% url 'signup' %}" method="POST" novalidate>
+                {% csrf_token %}
+                {{ form.as_p }}
+                <input type="submit" value="OK">
+            {#    {% include 'путь до реализован формы' %}#}
+            </form>
     </div>
 {% endblock %}
